syntax = "proto3";

package order;

option go_package = "api-gateway/proto/order;order";

service OrderService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
  rpc GetOrder (OrderID) returns (OrderResponse);
}

message OrderRequest {
  string userId = 1;
  string productId = 2;
  int32 quantity = 3;
  float price = 4;
}

message OrderResponse {
  string orderId = 1;
  string userId = 2;
  string productId = 3;
  int32 quantity = 4;
  float price = 5;
  string status = 6;
}

message OrderID {
  string id = 1;
}
